--- a/Workshop_10_Spark_DataFrame_Basics_(Colab).ipynb
+++ b/Workshop_10_Spark_DataFrame_Basics_(Colab).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMTYK16+ZhEeSgwAf43Leat",
+      "authorship_tag": "ABX9TyPrEZq/LmN6F0m4Itp38IeT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,10 +27,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Q1 This question is testing your understanding of Python Basics."
+      ],
+      "metadata": {
+        "id": "JxCrKeGMSaeV"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "fcd8eda9",
         "outputId": "13f9047a-309e-4804-9ec5-aa3dd2f2e421"
@@ -54,7 +64,8 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "35365749",
         "outputId": "4eb2dc1d-2efc-40e3-dc11-a5247f0a12a4"
@@ -78,7 +89,8 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "e0f62a0b",
         "outputId": "aba61750-772a-4bb7-9b76-11336800f01d"
@@ -104,7 +116,8 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "1ea2a3f5",
         "outputId": "5e847ace-a1e0-4669-c16b-819604ec17b8"
@@ -129,7 +142,8 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "11563bdf",
         "outputId": "0c36ec26-16ec-44de-b969-b723b835a30b"
@@ -154,7 +168,8 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "5dae6833",
         "outputId": "3c07169d-b13c-4ae2-bdf0-be532be163d9"
@@ -186,7 +201,8 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "917474ef",
         "outputId": "39ed5fc8-c685-4a8b-f537-4a5b6563cbb1"
@@ -218,7 +234,8 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "06922a56",
         "outputId": "bb06d54b-742e-414f-95cc-6abdb28fef23"
@@ -258,6 +275,179 @@
             "Medium speed\n",
             "Fast speed\n",
             "Fast speed\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Q2 This question is testing your understanding of PySpark operations on DataFrame."
+      ],
+      "metadata": {
+        "id": "FOEmcp8qShaB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "98fd3f17",
+        "outputId": "50885b56-5c47-4ee2-e9cb-c57cec921f1b"
+      },
+      "source": [
+        "from pyspark.sql import SparkSession\n",
+        "from pyspark.sql.functions import min, max, avg, sum, count\n",
+        "\n",
+        "# Create a SparkSession\n",
+        "spark = SparkSession.builder.appName(\"PySparkOperations\").getOrCreate()\n",
+        "\n",
+        "# Given data\n",
+        "data = [(\"James\",\"Sales\",\"SG\",70000,34,10000),\n",
+        "        (\"Michael\",\"Sales\",\"SG\",66000,56,20000),\n",
+        "        (\"Robert\",\"Sales\",\"MY\",61000,30,23000),\n",
+        "        (\"Maria\",\"Finance\",\"MY\",60000,24,23000),\n",
+        "        (\"Raman\",\"Finance\",\"USA\",79000,40,24000),\n",
+        "        (\"Scott\",\"Finance\",\"USA\",63000,36,19000),\n",
+        "        (\"Jen\",\"Finance\",\"UK\",89000,53,15000),\n",
+        "        (\"Jeff\",\"Marketing\",\"UK\",70000,25,18000),\n",
+        "        (\"Alice\",\"Marketing\",\"UK\",78000,50,21000),\n",
+        "        (\"Ada\",\"IT\",\"SG\",83000,35,11000),\n",
+        "        (\"Jackson\",\"IT\",\"MY\",71000,30,21000),\n",
+        "        (\"Cooper\",\"IT\",\"UK\",91000,40,21000)]\n",
+        "\n",
+        "# Define schema\n",
+        "schema = [\"employee_name\", \"department\", \"country\", \"salary\", \"age\", \"bonus\"]\n",
+        "\n",
+        "# Create DataFrame\n",
+        "df = spark.createDataFrame(data, schema)\n",
+        "\n",
+        "# Show data and print schema\n",
+        "print(\"DataFrame Data:\")\n",
+        "df.show()\n",
+        "\n",
+        "print(\"DataFrame Schema:\")\n",
+        "df.printSchema()"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "DataFrame Data:\n",
+            "+-------------+----------+-------+------+---+-----+\n",
+            "|employee_name|department|country|salary|age|bonus|\n",
+            "+-------------+----------+-------+------+---+-----+\n",
+            "|        James|     Sales|     SG| 70000| 34|10000|\n",
+            "|      Michael|     Sales|     SG| 66000| 56|20000|\n",
+            "|       Robert|     Sales|     MY| 61000| 30|23000|\n",
+            "|        Maria|   Finance|     MY| 60000| 24|23000|\n",
+            "|        Raman|   Finance|    USA| 79000| 40|24000|\n",
+            "|        Scott|   Finance|    USA| 63000| 36|19000|\n",
+            "|          Jen|   Finance|     UK| 89000| 53|15000|\n",
+            "|         Jeff| Marketing|     UK| 70000| 25|18000|\n",
+            "|        Alice| Marketing|     UK| 78000| 50|21000|\n",
+            "|          Ada|        IT|     SG| 83000| 35|11000|\n",
+            "|      Jackson|        IT|     MY| 71000| 30|21000|\n",
+            "|       Cooper|        IT|     UK| 91000| 40|21000|\n",
+            "+-------------+----------+-------+------+---+-----+\n",
+            "\n",
+            "DataFrame Schema:\n",
+            "root\n",
+            " |-- employee_name: string (nullable = true)\n",
+            " |-- department: string (nullable = true)\n",
+            " |-- country: string (nullable = true)\n",
+            " |-- salary: long (nullable = true)\n",
+            " |-- age: long (nullable = true)\n",
+            " |-- bonus: long (nullable = true)\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a77249c8",
+        "outputId": "3f6c7dd3-b890-4de7-c453-791e1e98e3f2"
+      },
+      "source": [
+        "# Group by department and calculate aggregates\n",
+        "department_aggregates = df.groupBy(\"department\").agg(\n",
+        "    min(\"salary\").alias(\"min_salary\"),\n",
+        "    max(\"salary\").alias(\"max_salary\"),\n",
+        "    avg(\"salary\").alias(\"average_salary\"),\n",
+        "    sum(\"salary\").alias(\"total_salary\"),\n",
+        "    count(\"*\").alias(\"employee_count\")\n",
+        ")\n",
+        "\n",
+        "print(\"Aggregates by Department:\")\n",
+        "department_aggregates.show()"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Aggregates by Department:\n",
+            "+----------+----------+----------+-----------------+------------+--------------+\n",
+            "|department|min_salary|max_salary|   average_salary|total_salary|employee_count|\n",
+            "+----------+----------+----------+-----------------+------------+--------------+\n",
+            "|     Sales|     61000|     70000|65666.66666666667|      197000|             3|\n",
+            "|   Finance|     60000|     89000|          72750.0|      291000|             4|\n",
+            "| Marketing|     70000|     78000|          74000.0|      148000|             2|\n",
+            "|        IT|     71000|     91000|81666.66666666667|      245000|             3|\n",
+            "+----------+----------+----------+-----------------+------------+--------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "671203ad",
+        "outputId": "9a417ad0-7588-4923-8c98-c7aa1582e158"
+      },
+      "source": [
+        "# Group by country and calculate aggregates\n",
+        "country_aggregates = df.groupBy(\"country\").agg(\n",
+        "    min(\"salary\").alias(\"min_salary\"),\n",
+        "    max(\"salary\").alias(\"max_salary\"),\n",
+        "    avg(\"salary\").alias(\"average_salary\"),\n",
+        "    sum(\"salary\").alias(\"total_salary\"),\n",
+        "    count(\"*\").alias(\"employee_count\")\n",
+        ")\n",
+        "\n",
+        "print(\"Aggregates by Country:\")\n",
+        "country_aggregates.show()"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Aggregates by Country:\n",
+            "+-------+----------+----------+--------------+------------+--------------+\n",
+            "|country|min_salary|max_salary|average_salary|total_salary|employee_count|\n",
+            "+-------+----------+----------+--------------+------------+--------------+\n",
+            "|     MY|     60000|     71000|       64000.0|      192000|             3|\n",
+            "|    USA|     63000|     79000|       71000.0|      142000|             2|\n",
+            "|     SG|     66000|     83000|       73000.0|      219000|             3|\n",
+            "|     UK|     70000|     91000|       82000.0|      328000|             4|\n",
+            "+-------+----------+----------+--------------+------------+--------------+\n",
+            "\n"
           ]
         }
       ]
